--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "http-server": "^0.7.2",
     "object.pick": "^0.1.1",
     "request": "^2.45.0",
+    "rimraf": "^2.2.8",
     "uncss": "^0.9.0"
   }
 }
